@@ -124,7 +124,7 @@ Following example presents how to execute simple, asynchronous query against a r
                 a = random.randint(1, 100)
                 b = random.randint(1, 100)
                 print('Asynchronous call with queryid=%s with arguments: %s, %s' % (x, a, b))
-                q.async('asynchMult', x, a, b);
+                q.send('asynchMult', x, a, b);
             
             time.sleep(1)
         finally:
