@@ -309,7 +309,7 @@ class QConnection(object):
             raise QReaderException('Received message of type: %s where response was expected')
 
 
-    def async(self, query, *parameters, **options):
+    def send(self, query, *parameters, **options):
         '''Performs an asynchronous query and returns **without** retrieving of 
         the response.
         
@@ -319,11 +319,11 @@ class QConnection(object):
         
         Calls a anonymous function with a single parameter:
         
-            >>> q.async('{til x}', 10)
+            >>> q.send('{til x}', 10)
         
         Executes a q expression:
         
-            >>> q.async('til 10')
+            >>> q.send('til 10')
         
         :Parameters:
          - `query` (`string`) - query to be executed
