@@ -1,4 +1,12 @@
 ------------------------------------------------------------------------------
+  qPython 2.0.0 [2018.08.31]
+------------------------------------------------------------------------------
+
+  - BREAKING CHANGE: Renamed QConnection.async to QConnection.send to
+    support Python 3.7 because of async keyword promotion.
+  - Fix DeprecationWarnings and FutureWarnings
+
+------------------------------------------------------------------------------
   qPython 1.3.0 [2017.03.xx]
 ------------------------------------------------------------------------------
 
